# redfetch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyapp_launcher.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml  publish-exe.yml  publish-python.yml
src/redfetch/: __about__.py  __init__.py  api.py  auth.py  config.py  config_firstrun.py  db.py  desktop_shortcut.py  detecteq.py  download.py  listener.py  luarocks.py  main.py  meta.py  models.py  navmesh.py  net.py  post_update.py  processes.py  push.py  redfetch.py  runtime_errors.py  selfupdate.py  settings.toml  shortcuts.py  special.py  store.py  sync.py  sync_discovery.py  sync_executor.py  sync_planner.py  sync_remote.py  sync_types.py  terminal_ui.py  terminal_ui.tcss  unloadmq.py  update_check.py  update_status.py  utils.py
tests/: cli_reference.py  test_autologin_eqpath.py  test_cancellation_e2e.py  test_check.py  test_close_gating.py  test_config_validation.py  test_env_selection.py  test_fetch_sync_info.py  test_first_run_setup.py  test_headless_update.py  test_is_special_or_dependency.py  test_licensed_resources_filtering.py  test_listener.py  test_luarocks.py  test_manifest_integration.py  test_oauth_401_recovery.py  test_path_reset.py  test_process_lock.py  test_publish_message_file_fallback.py  test_readme_cli_reference.py  test_remote_snapshot.py  test_self_heal_eqpath.py  test_self_update_spawn.py  test_settings_local_deltas.py  test_shortcuts.py  test_special_resources_e2e.py  test_staged_extraction.py  test_startup_summary.py  test_sync_pipeline_regressions.py  test_sync_queue_rules.py  test_uninstall_e2e.py
