[tool.pytest.ini_options]
addopts = "-v"

[project]
name = "redfetch"
version = "0.1.0"
description = "Download EverQuest scripts and software from the RedGuides API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Redbot", email = "ask@redguides.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://www.redguides.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"