[project]
name = "redfetch"
description = "Download EverQuest scripts and software from the RedGuides API"
readme = "README.md"
license = "GPL-3.0-or-later"
dynamic = ["version"]
authors = [
    { name = "Redbot", email = "ask@redguides.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]
dependencies = [
    "requests",
    "dynaconf",
    "tomlkit",
    "flask",
    "flask-cors",
    "keyring",
    "textual",
    "pyperclip",
    "textual-fspicker",
    "cheroot"
]

[project.scripts]
redfetch = "redfetch.redfetch:main"

[project.urls]
Homepage = "https://www.redguides.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v"

[tool.hatch.version]
path = "src/redfetch/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE", "src/redfetch/*.py", "src/redfetch/settings.toml", "src/redfetch/terminal_ui.tcss"]
exclude = ["tests/**"]

[tool.hatch.build.targets.wheel]
include = ["README.md", "LICENSE", "src/redfetch/*.py", "src/redfetch/settings.toml", "src/redfetch/terminal_ui.tcss"]
packages = ["src/redfetch"]

